// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders matching snapshot 1`] = `
<RCTSafeAreaView
  style={
    [
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      },
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexBasis": "0%",
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "flex-start",
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 80,
          "width": "100%",
        },
        undefined,
      ]
    }
    testID="login"
  >
    <Image
      resizeMethod="auto"
      resizeMode="contain"
      source={1}
      style={
        [
          {
            "alignSelf": "center",
            "height": 80,
            "marginBottom": 60,
            "marginTop": 60,
            "width": 160,
          },
          {
            "tintColor": "#131416",
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "gap": 8,
            "justifyContent": "flex-start",
            "marginBottom": 8,
            "marginTop": 80,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "#b4b4b566",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 12,
              "height": 48,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
        testID="login-password-input"
      >
        <View
          style={
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "minHeight": 0,
            }
          }
        >
          <TextInput
            accessibilityLabel="login-password-input"
            autoCapitalize="none"
            autoFocus={false}
            editable={true}
            keyboardAppearance="light"
            multiline={false}
            numberOfLines={1}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Enter password"
            placeholderTextColor="#66676a"
            returnKeyType="done"
            secureTextEntry={true}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderWidth": 0,
                  "color": "#131416",
                  "fontFamily": "Geist-Regular",
                  "height": 46,
                },
                {
                  "fontSize": 16,
                  "letterSpacing": 0,
                },
                {
                  "lineHeight": 0,
                },
              ]
            }
            value=""
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 8,
                "height": 32,
                "justifyContent": "center",
                "opacity": 1,
                "width": 32,
              },
              undefined,
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
          testID="device-authentication-icon"
        >
          <SvgMock
            fill="currentColor"
            name="Lock"
            style={
              [
                {
                  "color": "#131416",
                  "height": 24,
                  "width": 24,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
            "alignSelf": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    />
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Unlock"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#131416",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "marginTop": 4,
              "minWidth": 80,
              "opacity": 0.5,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="log-in-button"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Unlock
        </Text>
      </View>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        disabled={false}
        onPress={[Function]}
        style={
          {
            "alignSelf": "center",
            "marginBottom": 0,
            "marginTop": 0,
            "paddingTop": 16,
          }
        }
        testID="reset-wallet-button"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "alignSelf": "center",
                "color": "#66676a",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Forgot password?
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <TouchableOpacity
    activeOpacity={1}
    delayLongPress={10000}
    onLongPress={[Function]}
    style={
      {
        "bottom": 0,
        "height": 200,
        "left": 0,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "bottom": -20,
            "height": 300,
            "opacity": 0,
            "pointerEvents": "none",
          },
        ]
      }
      testID="fox-animation-mock"
    />
  </TouchableOpacity>
</RCTSafeAreaView>
`;

exports[`Login renders matching snapshot when password input is focused 1`] = `
<RCTSafeAreaView
  style={
    [
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      },
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexBasis": "0%",
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "flex-start",
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 80,
          "width": "100%",
        },
        undefined,
      ]
    }
    testID="login"
  >
    <Image
      resizeMethod="auto"
      resizeMode="contain"
      source={1}
      style={
        [
          {
            "alignSelf": "center",
            "height": 80,
            "marginBottom": 60,
            "marginTop": 60,
            "width": 160,
          },
          {
            "tintColor": "#131416",
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "gap": 8,
            "justifyContent": "flex-start",
            "marginBottom": 8,
            "marginTop": 80,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "#b4b4b566",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 12,
              "height": 48,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
        testID="login-password-input"
      >
        <View
          style={
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "minHeight": 0,
            }
          }
        >
          <TextInput
            accessibilityLabel="login-password-input"
            autoCapitalize="none"
            autoFocus={false}
            editable={true}
            keyboardAppearance="light"
            multiline={false}
            numberOfLines={1}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Enter password"
            placeholderTextColor="#66676a"
            returnKeyType="done"
            secureTextEntry={true}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderWidth": 0,
                  "color": "#131416",
                  "fontFamily": "Geist-Regular",
                  "height": 46,
                },
                {
                  "fontSize": 16,
                  "letterSpacing": 0,
                },
              ]
            }
            value="password"
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 8,
                "height": 32,
                "justifyContent": "center",
                "opacity": 1,
                "width": 32,
              },
              undefined,
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
          testID="device-authentication-icon"
        >
          <SvgMock
            fill="currentColor"
            name="Lock"
            style={
              [
                {
                  "color": "#131416",
                  "height": 24,
                  "width": 24,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
            "alignSelf": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    />
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Unlock"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#131416",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "marginTop": 4,
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="log-in-button"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Unlock
        </Text>
      </View>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        disabled={false}
        onPress={[Function]}
        style={
          {
            "alignSelf": "center",
            "marginBottom": 0,
            "marginTop": 0,
            "paddingTop": 16,
          }
        }
        testID="reset-wallet-button"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "alignSelf": "center",
                "color": "#66676a",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Forgot password?
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <TouchableOpacity
    activeOpacity={1}
    delayLongPress={10000}
    onLongPress={[Function]}
    style={
      {
        "bottom": 0,
        "height": 200,
        "left": 0,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "bottom": -20,
            "height": 300,
            "opacity": 0,
            "pointerEvents": "none",
          },
        ]
      }
      testID="fox-animation-mock"
    />
  </TouchableOpacity>
</RCTSafeAreaView>
`;
